# kobe

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-bake.hcl  flake.nix  justfile  mise.toml
.github/actions/setup-pgp-kms-signing/: action.yml
.github/workflows/: ci.yml  docker.yml  package-publish.yml  publish-chart.yml  publish-crates.yaml
apt_config/: distributions
aur/kobe-bin/: PKGBUILD
charts/kobe/: Chart.yaml  values.schema.json  values.yaml
charts/kobe/crds/: accesspolicies.yaml  authpolicies.yaml  bootstrapconfigs.yaml  cidrclaims.yaml  cidrpools.yaml  clusterclaims.yaml  clusterinstances.yaml  clusterleases.yaml  clusterpoolprofiles.yaml  clusterpools.yaml  datastores.yaml  kobestores.yaml
charts/kobe/templates/: NOTES.txt  _helpers.tpl  bootstrap-flux.yaml  bootstrapconfigs.yaml  cidrpool.yaml  configmap-kobe-live-instances.yaml  daemonset-host-reaper.yaml  datastore-etcd.yaml  datastore-kine.yaml  deployment.yaml  ingress.yaml  ipam-cidrpool.yaml  job-psa-labels.yaml  kobestores.yaml  networkpolicy.yaml  pdb.yaml  rbac.yaml  service.yaml  servicemonitor.yaml  vap-namespace-protection.yaml
crates/kobectl/: Cargo.toml  build.rs
crates/kobectl/src/: main.rs
crates/kobectl/src/commands/: config.rs  lease_create.rs  leases.rs  mod.rs  picker.rs  session.rs  status.rs
demo/_shared/: lib.sh  values.yaml
demo/_shared/chart/: Chart.yaml  values.yaml
demo/_shared/chart/charts/: kobe-0.19.1.tgz  kobe-0.21.19.tgz
demo/_shared/chart/templates/: cluster-pool.yaml  local-path.yaml
demo/_shared/manifests/kobe/: accesspolicy.yaml  clusterpool.yaml
demo/exoscale/: Chart.yaml  README.md  demo  values.yaml
demo/exoscale/manifests/: local-path.yaml
demo/exoscale/manifests/ubuntu/: 00-namespace.yaml  10-deployment.yaml
demo/exoscale/templates/: NOTES.txt  access-policy.yaml  cluster-pool.yaml
demo/hetzner/: README.md  demo  values.yaml
demo/hetzner/terraform/: .gitignore  .terraform.lock.hcl  cloud-init.agent.yaml.tftpl  cloud-init.server.yaml.tftpl  main.tf  outputs.tf  variables.tf
deploy/flux/: helmrelease.yaml  kustomization.yaml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: deployment.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
deploy/helm/templates/crds/: authpolicy.yaml  clusterclaim.yaml  clusterpoolprofile.yaml
deploy/policies/: auth-clerk.yaml  auth-generic.yaml  auth-github.yaml
deploy/profiles/: e2e-basic.yaml  e2e-direct-k3s.yaml  e2e-full.yaml  e2e-k3k-snapshot.yaml
docker/: builder.Dockerfile  kobe-sync.Dockerfile  operator.Dockerfile
docs/guides/: cross-host-migration.md  upgrade-policy.md  velero-golden-images.md
docs/kobe-docs/: index.mdx  meta.json
docs/kobe-docs/api/: meta.json  reference.mdx
docs/kobe-docs/auth/: meta.json  oidc.mdx  overview.mdx  ssh-keys.mdx
docs/kobe-docs/commands/: meta.json  reference.mdx
docs/kobe-docs/getting-started/: configuration.mdx  installation.mdx  quick-start.mdx
docs/kobe-docs/how-it-works/: architecture.mdx  meta.json  pool-lifecycle.mdx  runtime-strategy.mdx
docs/kobe-docs/pools/: backends.mdx  meta.json  overview.mdx
docs/superpowers/plans/: 2026-05-14-kobe-on-hetzner-demo.md
docs/superpowers/specs/: 2026-05-14-kobe-on-hetzner-demo-design.md
hack/: e2e.ts  lease-smoke.sh  test-e2e-k3s.ts  test-smoke-bootstrap.ts  test-smoke-pool.ts  test-smoke.ts
nix/: package.nix
scripts/: check-version-consistency.sh  require-ci-green.sh
scripts/apt/: configure-rclone.sh  download-debs.sh  generate-repo.sh  publish.sh  smoke-test.sh  validate.sh
scripts/ci/: resolve-version.sh
src/: crdgen.rs  host_reaper_bin.rs  kobe_sync_bin.rs  kubeconfig_publisher_bin.rs  leader.rs  main.rs  metrics.rs  pki.rs  telemetry.rs  testutil.rs
src/api/: auth.rs  connect.rs  mod.rs  policy.rs  routes.rs  upgrade.rs
src/backend/: capi.rs  datastore.rs  direct_k0s.rs  direct_k3s.rs  k0s.rs  k3k.rs  k3s.rs  kobe_sync.rs  mod.rs  vcluster.rs  vkobe.rs
src/cli/: main.rs
src/cli/commands/: claim.rs  config.rs  config_tui.rs  extend.rs  keepalive.rs  lease_create.rs  leases.rs  login.rs  mod.rs  pools.rs  purge.rs  release.rs  select.rs  state.rs  status.rs  version.rs  with_lease.rs
src/controllers/: auth_policy.rs  claim.rs  instance.rs  ipam.rs  kobestore_health.rs  lease.rs  live_set.rs  mod.rs  profile.rs
src/crd/: access_policy.rs  auth_policy.rs  bootstrap_config.rs  cidr.rs  claim.rs  datastore.rs  instance.rs  lease.rs  mod.rs  profile.rs
src/diagnostics/: bundle.rs  mod.rs
src/kobe_sync/: bootstrap.rs  certs.rs  config.rs  mod.rs  proxy.rs  upgrade.rs
src/kobe_sync/syncer/: configmaps.rs  endpoints.rs  fake_nodes.rs  ingresses.rs  mod.rs  network_policies.rs  pods.rs  pvcs.rs  secrets.rs  service_accounts.rs  services.rs  status.rs  traits.rs  translator.rs
src/pool/: cidr_alloc.rs  manager.rs  mod.rs
src/reaper/: classify.rs  mod.rs  mounts.rs  sweep.rs  unmount.rs
src/velero/: coordinator.rs  mod.rs  types.rs
tests/: reaper_integration.rs
