[package]
name = "kunobi-pool-operator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Cluster pool operator for instant CI/dev cluster provisioning (k3k, k3s, k0s, CAPI)"

[[bin]]
name = "kunobi-pool-operator"
path = "src/main.rs"

[dependencies]
# Kubernetes — kube 3.0 requires k8s-openapi 0.27 + schemars 1.x
kube = { version = "3.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }

# Web framework
axum = { version = "0.8", features = ["json", "matched-path"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# Auth
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# AWS S3 for diagnostics
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
prometheus = "0.14"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"

# PostgreSQL for direct-k3s shared datastore
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }

# Utilities
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
schemars = "1.2"
rand = "0.9"
hex = "0.4"
url = "2"
http = "1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
base64 = "0.22"
